# Hydroxide

./: .gitignore  .rusty-hook.toml  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
logs/: app.log.2025-02-05  app.log.2025-02-06  app.log.2025-02-07  app.log.2025-02-08  app.log.2025-02-09  app.log.2025-02-11
src/: config.rs  main.rs
src/cli/: mod.rs
src/server/: mod.rs
