[package]
name = "hydroxide"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
axum-server = "0.7.1"
git2 = "0.20.0"
gix = "0.70.0"
tokio = { version = "1.43.0", features = ["fs", "rt-multi-thread", "signal"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
serde = { version = "1.0.217", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
clap = { version = "4.5.28", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.2", features = ["tracing"] }
rcgen = "0.13.2"

[dev-dependencies]
rusty-hook = "^0.11.2"


[lints.rust]
unsafe_code = "warn"
unused_results = "warn"
missing_debug_implementations = "warn"
semicolon_in_expressions_from_macros = "warn"
single_use_lifetimes = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
variant_size_differences = "warn"

[profile.dev]
debug-assertions = true
rpath = false




[features]
https = ["axum-server/tls-rustls","axum-server/tls-rustls-no-provider"]
